# deltakit

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: iter.rs  lib.rs  merging.rs  save_parser.rs  savefile.rs  serialize.rs
core/src/gamedata/: armors.rs  items.rs  key_items.rs  lightworld_items.rs  mod.rs  party_members.rs  phone_numbers.rs  rooms.rs  spells.rs  weapons.rs
deltacommit/: Cargo.toml
deltacommit/src/: main.rs
deltainfo/: Cargo.toml
deltainfo/src/: main.rs
deltamerge/: Cargo.toml
deltamerge/src/: main.rs
research/saveprocess/: chapter1.gml
src/: SaveParser.rs  iter.rs  lib.rs  savefile.rs
src/gamedata/: armors.rs  items.rs  key_items.rs  lightworld_items.rs  mod.rs  party_members.rs  phone_numbers.rs  rooms.rs  spells.rs  weapons.rs
