[workspace]
members = [
    "core",
    "deltacommit",
    "deltainfo",
    "deltamerge",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Chilli <chilli@thechilli.dev>"]
edition = "2024"

[workspace.dependencies]
deltakit = { path = "./core" }
log = "0.4.27"
pretty_env_logger = "0.5.0"
compact_str = "0.9.0"
regex = "1.11.1"
indoc = "2.0.6"
clap = { version = "4.5.40", features = ["derive"] }
thiserror = "2.0.12"
